fixed hieght issue on mobile canvas

--- a/src/App.css
+++ b/src/App.css
@@ -15,8 +15,7 @@ a:visited {
 
 canvas {
   width: inherit !important;
-  min-height: 600px !important;
-  /* height: 100vh !important; */
+  min-height: 644px !important;
 }
 
 .credit {
